--- a/sass/admin/block-editor-styles.scss
+++ b/sass/admin/block-editor-styles.scss
@@ -354,6 +354,6 @@ h6{
 		}
     }
 }
-.edit-post-visual-editor pre.wp-block {
+.edit-post-visual-editor pre.wp-block, .edit-post-visual-editor .wp-block.wp-block-query-title {
     padding-left: 20px;
 }
